O1 PM Bulk support in DataCollector RAPP - removing trafficModel
Issue-ID: INT-1947

Signed-off-by: Stanislav Marszalek <s.marszalek2@partner.samsung.com>
Change-Id: I02d3684c98d563d7f386de2fdf032e984ac74b3f